# HaskellForeignCPPMinimal

./: .gitignore  project.cabal
cpp-src/: some.cpp  some.h
lib-src/: CPPLib.hs
program-src/: program.hs
